# jaarg

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md
.github/workflows/: test.yaml
examples/: bin2h.rs  btreemap.rs
jaarg/: Cargo.toml
jaarg-nostd/: Cargo.toml  README.md
jaarg-nostd/.cargo/: config.toml
jaarg-nostd/examples/: basic_nostd.rs  btreemap_nostd.rs
jaarg-nostd/src/: harness.rs  lib.rs  simplepathbuf.rs
jaarg/examples/: basic.rs  bin2h.rs  btreemap.rs
jaarg/src/: alloc.rs  argparse.rs  const_utf8.rs  help.rs  lib.rs  option.rs  options.rs  ordered_bitset.rs  std.rs
src/: argparse.rs  const_utf8.rs  help.rs  lib.rs  option.rs  options.rs  ordered_bitset.rs  std.rs
