[package]
name = "jaarg"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "It can parse your arguments you should use it it's called jaarg"

[features]
default = ["std"]
std = []

[profile.release]
lto = "thin"
strip = "symbols"

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = 1

[profile.dev-fast]
inherits = "dev"
strip = "debuginfo"
debug = 0
