[workspace]
members = ["jaarg"]
resolver = "3"

[workspace.package]
version = "0.1.1"
license = "MIT"
edition = "2021"
description = "It can parse your arguments you should use it it's called jaarg"
homepage = "https://github.com/gay-pizza/jaarg"
authors = ["Gay Pizza Specifications"]

[profile.release]
lto = "thin"
strip = "symbols"

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = 1

[profile.dev-fast]
inherits = "dev"
strip = "debuginfo"
debug = 0
