[workspace]
default-members = ["jaarg"]
members = ["jaarg-nostd"]
resolver = "3"

[workspace.package]
version = "0.2.2"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "It can parse your arguments you should use it it's called jaarg"
repository = "https://github.com/gay-pizza/jaarg"
homepage = "https://gay.pizza/"
authors = ["a dinosaur", "Gay Pizza Specifications"]

[profile.release]
lto = "thin"
strip = "symbols"

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = 1

[profile.dev-fast]
inherits = "dev"
strip = "debuginfo"
debug = 0
